--- a/vignettes/PathwaySpace.Rmd
+++ b/vignettes/PathwaySpace.Rmd
@@ -32,7 +32,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 # Overview
 
-For a given *igraph* object containing vertices, edges, and a signal associated with the vertices, *PathwaySpace* performs a convolution operation, which involves a weighted combination of neighboring signals on a 2D graph space. **Figure 1** illustrates the convolution operation problem. Each vertex's signal is positioned on a grid at specific `x` and `y` coordinates, represented by cones (for available signals) or question marks (for null or missing values). Our model considers the vertex-signal positions as source points (or transmitters) and the null-signal positions as end points (or receivers). The signal values from vertex-signal positions are then projected to the null-signal positions according to a decay function, which will control how the signal values attenuate as they propagate across the 2D space. For a given null-signal position, the k-top signals are used to define the contributing vertices for signal convolution. The convolution operation aggregates the signals from these contributing vertices, considering their intensities reaching the end points. Users can adjust both the decay and aggregation functions, which are passed as parameters to the projection methods. The aggregation function can be any arithmetic rule that combines a numeric vector into a single scalar value, while available decay functions include linear, exponential, and Weibull functions (**Fig.1B**). The resulting image forms geodesic paths in which the signal has been projected from vertex- to null-signal positions, using a density metric to measure the signal intensity along these paths.
+For a given *igraph* object containing vertices, edges, and a signal associated with the vertices, *PathwaySpace* performs a convolution operation, which involves a weighted combination of neighboring signals on a 2D graph space. **Figure 1** illustrates the convolution operation problem. Each vertex's signal is positioned on a grid at specific `x` and `y` coordinates, represented by cones (for available signals) or question marks (for null or missing values). Our model considers the vertex-signal positions as source points (or transmitters) and the null-signal positions as end points (or receivers). The signal values from vertex-signal positions are then projected to the null-signal positions according to a decay function, which will control how the signal values attenuate as they propagate across the 2D space. For a given null-signal position, the k-top signals are used to define the contributing vertices for signal convolution. The convolution operation aggregates the signals from these contributing vertices, considering their intensities reaching the end points. Users can adjust both the aggregation and decay functions; the aggregation function can be any arithmetic rule that reduces a numeric vector into a single scalar value (*e.g.*, mean, weighted mean), while available decay functions include linear, exponential, and Weibull models (**Fig.1B**). Additionally, users can assign vertex-specific decay functions to model signal projections for subsets of vertices that may exhibit distinct behaviors. The resulting image forms geodesic paths in which the signal has been projected from vertex- to null-signal positions, using a density metric to measure the signal intensity along these paths.
 
 ```{r fig1, echo=FALSE, fig.cap="**Figure 1.** Signal processing addressed by the *PathwaySpace* package. **A**) Graph overlaid on a 2D coordinate system. Each projection cone represents the signal associated with a graph vertex (referred to as *vertex-signal positions*), while question marks indicate positions with no signal information (referred to as *null-signal positions*). **Inset**: Graph layout of the toy example used in the *quick start* section of this vignette. **B**) Illustration of signal projection from two neighboring vertices, simplified to one dimension. **Right**: Signal profiles from aggregation and decay functions.", out.width = '90%', purl=FALSE}
 knitr::include_graphics("figures/fig1.png")
@@ -147,7 +147,7 @@ vertexSignal(p_space1)
 Following that, we will use the `circularProjection()` function to project the network signals, using the `signalDecay()` function with default settings. We set `k = 1`, defining the contributing vertices for signal convolution. In this case, each *null-signal position* will receive the projection from a single *vertex-signal position* (*i.e.* the highest signal intensity in pathway space reaching that position). We then create a landscape image using the `plotPathwaySpace()` function.
 
 ```{r Circular projection - 1, eval=FALSE, message=FALSE, out.width="70%"}
-# Run network signal projection
+# Run signal projection
 p_space1 <- circularProjection(p_space1, k = 1, pdist = 0.4)
 
 # Plot a PathwaySpace image
@@ -164,10 +164,10 @@ plotPathwaySpace(p_space1, add.marks = TRUE)
 knitr::include_graphics("figures/fig3.png")
 ```
 
-The `pdist` term determines a distance unit for the signal convolution related to the pathway space. This distance unit will affect the extent over which the convolution operation projects the signal in the pathway space. Next, we reassess the same *PathwaySpace* object using `k = 2`. The user can also customize a few arguments in `plotPathwaySpace()` function, which is a wrapper to create dedicated *ggplot* graphics for *PathwaySpace-class* objects. 
+The `pdist` term determines a distance unit for the signal convolution related to the pathway space. This distance unit will affect the extent over which the convolution operation projects the signal in the pathway space. Next, we reassess the same *PathwaySpace* object using `k = 2`. The user can also customize a few arguments in `plotPathwaySpace()` function, which is a wrapper to create *ggplot* graphics for *PathwaySpace-class* objects.
 
 ```{r Circular projection - 2, eval=FALSE, message=FALSE, out.width="70%"}
-# Re-run the network signal projection with 'k = 2'
+# Re-run signal projection with 'k = 2'
 p_space1 <- circularProjection(p_space1, k = 2, pdist = 0.4)
 
 # Plot the PathwaySpace image
@@ -184,12 +184,14 @@ plotPathwaySpace(p_space1, marks = c("n3","n4"), theme = "th2")
 knitr::include_graphics("figures/fig4.png")
 ```
 
-By default, a Weibull decay function is used for signal projection, passed to the `circularProjection()` function by the `decay.fun` argument. The user can pass additional arguments to the decay function, for example:
+By default, the signal projection uses a Weibull decay function, which is passed to the `circularProjection()` function via the vertex attribute `decayFunction`. This attribute can be modified by the user using the `gs_vertex_attr()` accessor. For example:
 
 ```{r Circular projection - 3, eval=FALSE, message=FALSE, out.width="70%"}
-# Re-run the network signal projection, passing 'shape' to the decay function
-p_space1 <- circularProjection(p_space1, k = 2, pdist = 0.2, 
-  decay.fun = signalDecay(shape = 2))
+# Modify the vertex `decayFunction` attribute, adjusting Weibull's 'shape'
+gs_vertex_attr(p_space1, "decayFunction") <- signalDecay(shape = 2)
+
+# Re-run signal projection
+p_space1 <- circularProjection(p_space1, k = 2, pdist = 0.2)
 
 # Plot the PathwaySpace image
 plotPathwaySpace(p_space1, marks = "n1", theme = "th2")
@@ -239,12 +241,14 @@ p_space2 <- buildPathwaySpace(g_space2)
 
 # Set '1s' as vertex signal
 vertexSignal(p_space2) <- 1
+
+# Modify the vertex `decayFunction` attribute
+gs_vertex_attr(p_space2, "decayFunction") <- signalDecay(shape = 2)
 ```
 
 ```{r Polar projection - 4, eval=FALSE, message=FALSE, out.width="70%"}
-# Run the network signal projection using polar coordinates
-p_space2 <- polarProjection(p_space2, k = 2, theta = 45, 
-  decay.fun = signalDecay(shape = 2))
+# Run signal projection using polar coordinates
+p_space2 <- polarProjection(p_space2, k = 2, theta = 45)
 
 # Plot the PathwaySpace image
 plotPathwaySpace(p_space2, theme = "th2", add.marks = TRUE)
@@ -263,9 +267,8 @@ knitr::include_graphics("figures/fig7.png")
 Note that this projection emphasizes signals along the edges of the network. In order to also consider the direction of edges, next we set `directional = TRUE`.
 
 ```{r Polar projection - 5, eval=FALSE, message=FALSE, out.width="70%"}
-# Re-run the network signal projection using 'directional = TRUE'
-p_space2 <- polarProjection(p_space2, k = 2, theta = 45, 
-  decay.fun = signalDecay(shape = 2), directional = TRUE)
+# Re-run signal projection using 'directional = TRUE'
+p_space2 <- polarProjection(p_space2, k = 2, theta = 45, directional = TRUE)
 
 # Plot the PathwaySpace image
 plotPathwaySpace(p_space2, theme = "th2", marks = c("n1","n3","n4","n5"))
@@ -296,8 +299,8 @@ vertexSignal(p_space1)
 # n1 n2 n3 n4 n5 
 #  6  4 -2 -4  3 
 
-# Re-run the network signal projection
-p_space1 <- circularProjection(p_space1, k = 2, decay.fun = signalDecay(shape = 2))
+# Re-run signal projection
+p_space1 <- circularProjection(p_space1, k = 2)
 
 # Plot the PathwaySpace image
 plotPathwaySpace(p_space1, bg.color = "white", font.color = "grey20", add.marks = TRUE, mark.color = "magenta", theme = "th2")
@@ -363,10 +366,10 @@ plotGraphSpace(g_space_PCv12, node.labels = top10hubs, label.color = "blue", the
 ```
 
 ```{r fig10.png, eval=TRUE, message=FALSE, echo=FALSE, include=FALSE, purl=FALSE}
-gg <- plotGraphSpace(g_space_PCv12, node.labels = top10hubs,
-label.color = "blue",  theme = "th3", label.size = 2)
-ggsave(filename = "./figures/fig10.png", height=3.5, width=4.5,
-  units="in", device="png", dpi=200, plot=gg)
+# gg <- plotGraphSpace(g_space_PCv12, node.labels = top10hubs,
+# label.color = "blue",  theme = "th3", label.size = 2)
+# ggsave(filename = "./figures/fig10.png", height=3.5, width=4.5,
+#   units="in", device="png", dpi=200, plot=gg)
 ```
 
 ```{r fig10, echo=FALSE, out.width = '70%', purl=FALSE}
@@ -419,7 +422,7 @@ vertexSignal(p_space_PCv12)[ hallmarks$HALLMARK_P53_PATHWAY ] <- 1
 ...and run the `circularProjection()` function.
 
 ```{r PathwaySpace decoration - 7, eval=FALSE, message=FALSE}
-# Run network signal projection
+# Run signal projection
 p_space_PCv12 <- circularProjection(p_space_PCv12)
 plotPathwaySpace(p_space_PCv12, title="HALLMARK_P53_PATHWAY", marks = top10hubs, mark.size = 2, theme = "th3")
 ```
