--- a/vignettes/PathwaySpace.Rmd
+++ b/vignettes/PathwaySpace.Rmd
@@ -170,7 +170,7 @@ The `pdist` term determines a distance unit for the signal convolution related t
 # Re-run signal projection with 'k = 2'
 p_space1 <- circularProjection(p_space1, k = 2, pdist = 0.4)
 
-# Plot the PathwaySpace image
+# Plot PathwaySpace
 plotPathwaySpace(p_space1, marks = c("n3","n4"), theme = "th2")
 ```
 
@@ -191,7 +191,7 @@ By default, the signal projection uses a Weibull decay function, which is passed
 p_space1 <- circularProjection(p_space1, k = 2, pdist = 0.2, 
   decay.fun = signalDecay(shape = 2))
 
-# Plot the PathwaySpace image
+# Plot PathwaySpace
 plotPathwaySpace(p_space1, marks = "n1", theme = "th2")
 ```
 
@@ -241,21 +241,23 @@ p_space2 <- buildPathwaySpace(g_space2)
 vertexSignal(p_space2) <- 1
 ```
 
-For fine-grained modeling of signal decay, the `vertexDecay()` accessor allows assigning decay functions at the level of individual vertices. For example:
+For fine-grained modeling of signal decay, the `vertexDecay()` accessor allows assigning decay functions at the level of individual vertices. For example, adjusting Weibull's `shape` arguments for node `n6`:
 
 ```{r Polar projection - 4, eval=TRUE, message=FALSE}
-# Modify the vertex 'decayFunction' attribute
-vertexDecay(p_space2) <- signalDecay(shape = 2)
-vertexDecay(p_space2)[["n1"]] <- signalDecay(shape = 3)
+# Modify decay function
+# ..for all vertices
+vertexDecay(p_space2) <- signalDecay(shape=2)
+# ..for individual vertices
+vertexDecay(p_space2)[["n6"]] <- signalDecay(shape=3)
 ```
 
-Next, we run signal projection using polar coordinates:
+Next, we run signal projection using polar coordinates. The `beta` exponent will control the angular span; for values greater than zero, `beta` will progressively shift toward a polar projection.
 
 ```{r Polar projection - 5, eval=FALSE, message=FALSE, out.width="70%"}
 # Run signal projection using polar coordinates
-p_space2 <- polarProjection(p_space2, k = 2, theta = 45, pdist = 0.2)
+p_space2 <- polarProjection(p_space2, beta = 10)
 
-# Plot the PathwaySpace image
+# Plot PathwaySpace
 plotPathwaySpace(p_space2, theme = "th2", add.marks = TRUE)
 ```
 
@@ -269,14 +271,13 @@ plotPathwaySpace(p_space2, theme = "th2", add.marks = TRUE)
 knitr::include_graphics("figures/fig7.png")
 ```
 
-Note that this projection emphasizes signals along the edges of the network. In order to also consider the direction of edges, next we set `directional = TRUE`.
+Note that this projection distributes signals on the edges regardless of direction. To incorporate edge orientation, we set `directional = TRUE`, which channels the projection along the paths:
 
 ```{r Polar projection - 6, eval=FALSE, message=FALSE, out.width="70%"}
 # Re-run signal projection using 'directional = TRUE'
-p_space2 <- polarProjection(p_space2, k = 2, theta = 45, 
-  pdist = 0.2, directional = TRUE)
+p_space2 <- polarProjection(p_space2, beta = 10, directional = TRUE)
 
-# Plot the PathwaySpace image
+# Plot PathwaySpace
 plotPathwaySpace(p_space2, theme = "th2", marks = c("n1","n3","n4","n5"))
 ```
 
@@ -290,7 +291,7 @@ plotPathwaySpace(p_space2, theme = "th2", marks = c("n1","n3","n4","n5"))
 knitr::include_graphics("figures/fig8.png")
 ```
 
-This updated *PathwaySpace* polar projection emphasizes the signal flow into a defined direction (see the directional pattern of the *igraph* plot at the top of this section). However, when interpreting the results, users must be aware that this method may introduce distortions. For example, depending on the network's structure, the polar projection may not capture all aspects of a directed graph, such as cyclic dependencies, feedforward and feedback loops, or other intricate edge interplays.
+This *PathwaySpace* polar projection emphasizes the signal flow along the directional pattern of a directed graph (see the *igraph* plot above). When interpreting the results, users should note that this approach introduces simplifications. For example, depending on the network topology, the polar projection may not capture all aspects of a directed graph, such as cyclic dependencies, feedforward and feedback loops, or other intricate edge interplays.
 
 ## Signal types
 
@@ -309,7 +310,7 @@ vertexSignal(p_space1)
 p_space1 <- circularProjection(p_space1, k = 2,
   decay.fun = signalDecay(shape = 2))
 
-# Plot the PathwaySpace image
+# Plot PathwaySpace
 plotPathwaySpace(p_space1, bg.color = "white", font.color = "grey20", add.marks = TRUE, mark.color = "magenta", theme = "th2")
 ```
 
