--- a/vignettes/PathwaySpace.Rmd
+++ b/vignettes/PathwaySpace.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "*PathwaySpace*: Spatial projection of network signals along geodesic paths."
-author: "The Cancer Genome Atlas Analysis Network."
+author: "Sysbiolab Team"
 date: "`r Sys.Date()`"
 bibliography: bibliography.bib
 abstract: "*PathwaySpace* is an R package that creates landscape images from graphs containing vertices (nodes), edges (lines), and a signal associated with the vertices. The package processes the signal using a convolution algorithm that considers the graph's topology, projecting the signal on a 2D space. *PathwaySpace* has various applications, such as visualizing network data in a graphical format that highlights the relationships and signal strengths between vertices. It can be particularly useful for understanding the influence of signals through complex networks. By combining graph theory, signal processing, and visualization, the *PathwaySpace* package provides a novel way of representing network signals."
@@ -164,27 +164,9 @@ plotPathwaySpace(p_space1, add.marks = TRUE)
 knitr::include_graphics("figures/fig3.png")
 ```
 
-The `pdist` term determines a distance unit for the signal convolution related to the pathway space. This distance unit will affect the extent over which the convolution operation projects the signal in the pathway space. Next, we reassess the same *PathwaySpace* object using `k = 2`. The user can also customize a few arguments in `plotPathwaySpace()` function, which is a wrapper to create *ggplot* graphics for *PathwaySpace-class* objects.
+The `pdist` term determines a distance unit for the signal convolution related to the pathway space. This distance unit will affect the extent over which the convolution operation projects the signal in the pathway space.
 
-```{r Circular projection - 2, eval=FALSE, message=FALSE, out.width="70%"}
-# Re-run signal projection with 'k = 2'
-p_space1 <- circularProjection(p_space1, k = 2, pdist = 0.4)
-
-# Plot PathwaySpace
-plotPathwaySpace(p_space1, marks = c("n3","n4"), theme = "th2")
-```
-
-```{r fig4.png, eval=TRUE, message=FALSE, echo=FALSE, include=FALSE, purl=FALSE}
-# gg <- plotPathwaySpace(p_space1, marks = c("n3","n4"), theme = "th2")
-# ggsave(filename = "./figures/fig4.png", height=3.5, width=5,
-#   units="in", device="png", dpi=350, plot=gg)
-```
-
-```{r fig4, echo=FALSE, out.width = '70%', purl=FALSE}
-knitr::include_graphics("figures/fig4.png")
-```
-
-By default, the signal projection uses a Weibull decay function, which is passed to the `circularProjection()` function via `decay.fun` argument. The user can modify the decay function, for example, adjusting the Weibull's `shape`:
+Next, we reassess the same *PathwaySpace* object using `k = 2` and adjusting the `shape` of the decay function, which is passed to the `circularProjection()` function via `decay.fun` argument.
 
 ```{r Circular projection - 3, eval=FALSE, message=FALSE, out.width="70%"}
 # Re-run signal projection, adjusting Weibull's shape
@@ -251,11 +233,11 @@ vertexDecay(p_space2) <- signalDecay(shape=2)
 vertexDecay(p_space2)[["n6"]] <- signalDecay(shape=3)
 ```
 
-Next, we run signal projection using polar coordinates. The `beta` exponent will control the angular span; for values greater than zero, `beta` will progressively shift toward a polar projection.
+Next, we run signal projection using polar coordinates. The `beta` exponent will control the angular span; for values greater than zero, `beta` will progressively narrow the projection along the edge axis. Also, in the `polarProjection()` function, the `pdist` term will define a distance unit related to edge length, aiming to constrain signal projections within edge bounds. Here we set `pdist = 1` to reach full edge lengths.
 
 ```{r Polar projection - 5, eval=FALSE, message=FALSE, out.width="70%"}
 # Run signal projection using polar coordinates
-p_space2 <- polarProjection(p_space2, beta = 10)
+p_space2 <- polarProjection(p_space2, beta = 10, pdist = 1)
 
 # Plot PathwaySpace
 plotPathwaySpace(p_space2, theme = "th2", add.marks = TRUE)
@@ -275,7 +257,7 @@ Note that this projection distributes signals on the edges regardless of directi
 
 ```{r Polar projection - 6, eval=FALSE, message=FALSE, out.width="70%"}
 # Re-run signal projection using 'directional = TRUE'
-p_space2 <- polarProjection(p_space2, beta = 10, directional = TRUE)
+p_space2 <- polarProjection(p_space2, beta = 10, pdist = 1, directional = TRUE)
 
 # Plot PathwaySpace
 plotPathwaySpace(p_space2, theme = "th2", marks = c("n1","n3","n4","n5"))
@@ -291,7 +273,7 @@ plotPathwaySpace(p_space2, theme = "th2", marks = c("n1","n3","n4","n5"))
 knitr::include_graphics("figures/fig8.png")
 ```
 
-This *PathwaySpace* polar projection emphasizes the signal flow along the directional pattern of a directed graph (see the *igraph* plot above). When interpreting the results, users should note that this approach introduces simplifications. For example, depending on the network topology, the polar projection may not capture all aspects of a directed graph, such as cyclic dependencies, feedforward and feedback loops, or other intricate edge interplays.
+This *PathwaySpace* polar projection emphasizes the signal flow along the directional pattern of a directed graph (see the *igraph* plot above). When interpreting, users should note that this approach introduces simplifications. For example, depending on the network topology, the polar projection may not capture some common features of a directed graph, such as cyclic dependencies, feedforward and feedback loops, or other intricate edge interplays.
 
 ## Signal types
 
@@ -328,175 +310,12 @@ knitr::include_graphics("figures/fig9.png")
 Note that the original signal vector was rescale to `[-1, +1]`. If the signal vector is `>=0`, then it will be rescaled to `[0, 1]`; if the signal vector is `<=0`, it will be rescaled to `[-1, 0]`; and if the signal vector is in `(-Inf, +Inf)`, then it will be rescaled to `[-1, +1]`. To override this signal processing, simply set the `rescale` argument to `FALSE` in the projection functions.
 
 
-# *PathwaySpace* decoration
+# Other vignettes
 
-In order to enhance clarity and make it less likely for viewers to miss important details of large graphs, in this section we introduce visual elements to large *PathwaySpace* images. We will use an *igraph* object with `n = 12990` vertices to create a large *PathwaySpace* object, upon which we will project binary signals from a relatively small number of vertices. This example will emphasize clusters of vertices forming *summits*, but it might also come at the cost of reduced clarity in displaying the graph's overall structure, particularly in regions far from the summit areas. In order to balance between emphasizing clusters and maintaining the visibility of the entire graph structure, we will outline graph silhouettes as decoration elements in the *PathwaySpace* image.
+```{r, eval=FALSE}
 
-```{r Load packages - case study, eval=FALSE, message=FALSE}
-#--- Load required packages for this section
-library(PathwaySpace)
-library(RGraphSpace)
-library(igraph)
-library(ggplot2)
-```
+vignette("visualizing-gene-sets", package = "PathwaySpace")
 
-## Loading a large graph
-
-Next, we will load an *igraph* object with `n = 12990` vertices, containing gene interaction data available from the *Pathway Commons* database (version 12) [@Rodchenkov2019].
-
-```{r PathwaySpace decoration - 1, eval=TRUE, message=FALSE, results='hide'}
-# Load a large igraph object
-data("PCv12_pruned_igraph", package = "PathwaySpace")
-
-# Check number of vertices
-length(PCv12_pruned_igraph)
-# [1] 12990
-
-# Check vertex names
-head(V(PCv12_pruned_igraph)$name)
-# [1] "A1BG" "AKT1" "CRISP3" "GRB2" "PIK3CA" "PIK3R1"
-
-# Get top-connected nodes for visualization
-top10hubs <- igraph::degree(PCv12_pruned_igraph)
-top10hubs <- names(sort(top10hubs, decreasing = TRUE)[1:10])
-head(top10hubs)
-# [1] "GNB1" "TRIM28" "RPS27A" "CTNNB1" "TP53" "ACTB"
-```
-
-```{r PathwaySpace decoration - 2, eval=TRUE, message=FALSE}
-## Check graph validity
-g_space_PCv12 <- GraphSpace(PCv12_pruned_igraph, mar = 0.1)
-```
-
-```{r PathwaySpace decoration - 3, eval=FALSE, message=FALSE}
-## Visualize the graph layout labeled with 'top10hubs' nodes
-plotGraphSpace(g_space_PCv12, node.labels = top10hubs, label.color = "blue", theme = "th3")
-```
-
-```{r fig10.png, eval=TRUE, message=FALSE, echo=FALSE, include=FALSE, purl=FALSE}
-# gg <- plotGraphSpace(g_space_PCv12, node.labels = top10hubs,
-# label.color = "blue",  theme = "th3", label.size = 2)
-# ggsave(filename = "./figures/fig10.png", height=3.5, width=4.5,
-#   units="in", device="png", dpi=200, plot=gg)
-```
-
-```{r fig10, echo=FALSE, out.width = '80%', purl=FALSE}
-knitr::include_graphics("figures/fig10.png")
-```
-
-
-We will also load gene sets from the *MSigDB* collection [@Liberzon2015], which are subsequently used to project a binary signal in the *PathwaySpace* image.
-
-```{r PathwaySpace decoration - 4, eval=FALSE, message=FALSE}
-# Load a list with Hallmark gene sets
-data("Hallmarks_v2023_1_Hs_symbols", package = "PathwaySpace")
-
-# There are 50 gene sets in "hallmarks"
-length(hallmarks)
-# [1] 50
-
-# We will use the 'HALLMARK_P53_PATHWAY' (n=200 genes) for demonstration
-length(hallmarks$HALLMARK_P53_PATHWAY)
-# [1] 200
-```
-
-
-## Running *PathwaySpace*
-
-We now follow the *PathwaySpace* pipeline as explained in the previous sections, that is, using the `buildPathwaySpace()` constructor to initialize a new *PathwaySpace* object with the *Pathway Commons* interactions.
-
-```{r PathwaySpace decoration - 5, eval=FALSE, message=FALSE}
-# Run the PathwaySpace constructor
-p_space_PCv12 <- buildPathwaySpace(gs=g_space_PCv12, nrc=500)
-# Note: 'nrc' sets the number of rows and columns of the
-# image space, which will affect the image resolution (in pixels)
-```
-
-...and now we mark the *HALLMARK_P53_PATHWAY* genes in the *PathwaySpace* object.
-
-```{r PathwaySpace decoration - 6, eval=FALSE, message=FALSE}
-# Intersect Hallmark genes with the PathwaySpace
-hallmarks <- lapply(hallmarks, intersect, y = names(p_space_PCv12) )
-
-# After intersection, the 'HALLMARK_P53_PATHWAY' dropped to n=173 genes
-length(hallmarks$HALLMARK_P53_PATHWAY)
-# [1] 173
-
-# Set a binary signal (1s) to 'HALLMARK_P53_PATHWAY' genes
-vertexSignal(p_space_PCv12) <- 0
-vertexSignal(p_space_PCv12)[ hallmarks$HALLMARK_P53_PATHWAY ] <- 1
-```
-
-...and run the `circularProjection()` function.
-
-```{r PathwaySpace decoration - 7, eval=FALSE, message=FALSE}
-# Run signal projection
-p_space_PCv12 <- circularProjection(p_space_PCv12)
-plotPathwaySpace(p_space_PCv12, title="HALLMARK_P53_PATHWAY", marks = top10hubs, mark.size = 2, theme = "th3")
-```
-
-```{r fig11.png, eval=FALSE, message=FALSE, echo=FALSE, purl=FALSE}
-# gg <- plotPathwaySpace(p_space_PCv12, theme = "th3",
-#   title="HALLMARK_P53_PATHWAY", marks = top10hubs,
-#   mark.size = 2, font.size = 0.8)
-# ggsave(filename = "./figures/fig11.png", plot=gg, height=4,
-#   width=5, units="in", device="png", dpi=250)
-```
-
-```{r fig11, echo=FALSE, out.width = '90%', purl=FALSE}
-knitr::include_graphics("figures/fig11.png")
-```
-
-Note that this image emphasizes groups of vertices forming *summits*, but it misses the outline of the graph structure, which faded with the signal that reaches the furthermost points of the network.
-
-## Mapping silhouettes
-
-Next, we will decorate the *PathwaySpace* image with graph's silhouettes.
-
-```{r PathwaySpace decoration - 8, eval=FALSE, message=FALSE}
-# Add silhouettes
-p_space_PCv12 <- silhouetteMapping(p_space_PCv12)
-plotPathwaySpace(p_space_PCv12, title="HALLMARK_P53_PATHWAY", marks = top10hubs, mark.size = 2, theme = "th3")
-```
-
-```{r fig12.png, eval=FALSE, message=FALSE, echo=FALSE, purl=FALSE}
-# gg <- plotPathwaySpace(p_space_PCv12, theme = "th3", 
-#   title="HALLMARK_P53_PATHWAY", marks = top10hubs, 
-#   mark.size = 2, font.size = 0.8)
-# ggsave(filename = "./figures/fig12.png", plot=gg, height=4,
-#   width=5, units="in", device="png", dpi=250)
-```
-
-```{r fig12, echo=FALSE, out.width = '90%', purl=FALSE}
-knitr::include_graphics("figures/fig12.png")
-```
-
-# Mapping summits
-
-The summits represent regions within the graph that exhibit signal values that are notably higher than the baseline level. These regions may be of interest for downstream analyses. One potential downstream analysis is to determine which vertices projected the original input signal. This could provide insights into the communities within these summit regions. One may also wish to explore other vertices within the summits, by querying associations with the original input gene set. In order to extract vertices within summits, next we use the `summitMapping()` function, which also decorate summits with contour lines.
-
-```{r Mapping summits - 1, eval=FALSE, message=FALSE}
-# Mapping summits
-p_space_PCv12 <- summitMapping(p_space_PCv12, minsize = 50)
-plotPathwaySpace(p_space_PCv12, title="HALLMARK_P53_PATHWAY", theme = "th3")
-```
-
-```{r fig13.png, eval=FALSE, message=FALSE, echo=FALSE, purl=FALSE}
-# gg <- plotPathwaySpace(p_space_PCv12, title="HALLMARK_P53_PATHWAY", 
-#   theme = "th3", font.size = 0.8,)
-# ggsave(filename = "./figures/fig13.png", plot=gg, height=4,
-#   width=5, units="in", device="png", dpi=250)
-```
-
-```{r fig13, echo=FALSE, out.width = '90%', purl=FALSE}
-knitr::include_graphics("figures/fig13.png")
-```
-
-```{r Mapping summits - 2, eval=FALSE, message=FALSE}
-# Extracting summits from a PathwaySpace
-summits <- getPathwaySpace(p_space_PCv12, "summits")
-class(summits)
-# [1] "list"
 ```
 
 
@@ -522,5 +341,4 @@ https://bioconductor.org/packages/RedeR/
 sessionInfo()
 ```
 
-# References
 
